# sgl-port-stm32f7

./: CMakeLists.txt  README.md  build.sh
cmake/: config.h.in  sgl_config.h.in  toolchain.cmake
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  README.md  main.c
include/: stm32f7xx_hal_conf.h  stm32f7xx_it.h
ldscripts/: STM32F765VITX_FLASH.ld  STM32F765VITX_RAM.ld
src/: stm32f7xx_it.c  syscalls.c  sysmem.c
